tests/expectations/compiler/dynamic_dispatch/dynamic_contains_wrong_arg_count_fail.out
Error [ETYC0372181]: `_dynamic_contains` requires 4 arguments, but found 3.
    --> compiler-test:11:24
     |
  11 |     let exists: bool = _dynamic_contains(prog, net, key);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
